// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FileUploaderItem rendering renders expected elements 1`] = `
<Layer
  as="li"
  className="FileUploader__file"
>
  <div
    className="FileUploader__fileName"
    title="foo.txt"
  >
    foo.txt
  </div>
  <div
    className="FileUploader__fileIcons"
  >
    <button
      aria-label="Delete foo.txt"
      className="FileUploader__fileRemove"
      type="button"
    >
      <Close />
    </button>
  </div>
</Layer>
`;

exports[`FileUploaderItem rendering renders expected elements when optional properties are set 1`] = `
<Layer
  as="li"
  className="FileUploader__file FileUploader__file--error TestClass"
>
  <div
    className="FileUploader__fileName"
    title="foo.txt"
  >
    foo.txt
  </div>
  <div
    className="FileUploader__fileIcons"
  >
    <WarningFilled
      className="FileUploader__errorIcon"
    />
    <button
      aria-label="Delete foo.txt"
      className="FileUploader__fileRemove"
      disabled={true}
      type="button"
    >
      <Close />
    </button>
  </div>
  <div
    className="FileUploader__fileError"
  >
    Test error
  </div>
</Layer>
`;
